fixed product being too big, still centered last product

--- a/html-css/style.css
+++ b/html-css/style.css
@@ -337,17 +337,18 @@ form {
 .container {
     display: flex;
     flex-direction: row;
-    /* Change to column if you want products in a column */
     flex-wrap: wrap;
-    /* Allows wrapping to the next line if needed */
+    justify-content: space-between;
     max-width: 90%;
-    margin: auto;
+    grid-template-rows: repeat(4, 1fr);
     gap: 20px;
+    margin:auto
 }
 
 .product {
-    flex: 1;
-    min-width: 250px;
+    flex: 1 0 auto;
+    max-width: 250px;
+    /* max-width: 250px; */
     background-color: #fff;
     border: 1px solid #ccc;
     border-radius: 8px;
@@ -355,6 +356,7 @@ form {
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     text-align: center;
     cursor: pointer;
+    margin:auto;
 }
 
 
